--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
- <!-- BootStrap CSS -->
+<script src="node_modules/chart.js/src/chart.js"></script> 
+<!-- BootStrap CSS -->
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
  <!-- JQuery -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -6,6 +7,7 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <!-- BootStrap JS -->
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+ <script src="lib/chart.js/dist/chart.js"></script>
 
 <!doctype html>
 <html lang="en">
