lab measurment_pagination osman

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 <!-- BootStrap JS -->
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
  <script src="lib/chart.js/dist/chart.js"></script>
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
 <!doctype html>
 <html lang="en">
