--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 
 <body class="mat-typography">
 <app-root></app-root>
+<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
